# BME-ComputerGraphics

./: .gitignore  README.md
assignment_0/: README.md  solid_color.tga
assignment_0/Results/: readme.txt
assignment_0/scenes/solid_color/: solid_color.sce
assignment_0/src/: CMakeLists.txt  Image.h  Mesh.cpp  Plane.h  Scene.cpp  raytrace.cpp
assignment_01/: README.md
assignment_01/results/: Cylinder.cpp  Plane.cpp  readme.txt
assignment_01/src/: Camera.h  Cylinder.cpp  Scene.cpp  Scene.h
assignment_01/theory_exercise/: theory_exercise.tex
assignment_02/: CMakeLists.txt  README.md
assignment_02/exercise02-n.meinen-c.duran-t.buchegger1/: Scene.cpp  readme.txt
assignment_02/exercise02-n.meinen-c.duran-t.buchegger1/results/: cylinders.tga  debug_aabb_toon_faces.tga  molecule.tga  spheres.tga
assignment_02/results/: combo.tga  debug_aabb_mask.tga  debug_aabb_rings.tga  mirror.tga  molecule2.tga  toon_faces.tga
assignment_02/src/: CMakeLists.txt  Cylinder.cpp  Plane.cpp
assignment_03/: README.md
assignment_03/output/: combo.tga  cube.tga  debug_aabb_mask.tga  debug_aabb_office.tga  debug_aabb_rings.tga  mask.tga  molecule.tga  molecule2.tga  office.tga  rings.tga  spheres.tga  toon_faces.tga
assignment_03/results/: Mesh.cpp  cylinders.tga  mask.tga  mirror.tga  office.tga  readme.txt  rings.tga  toon_faces.tga
assignment_03/src/: Mesh.cpp  Scene.cpp
assignment_04/: README.md
assignment_04/results/: readme.txt
assignment_04/src/: main.cpp  solar_viewer.cpp
assignment_05/lib/glew/: CMakeLists.txt
assignment_05/results/: readme.txt  solar_viewer.cpp
assignment_05/src/: shader.cpp  solar_viewer.cpp
assignment_07/: README.md
assignment_07/results/: Mesh.cpp  ShadowViewer.cpp  phong_shadow.frag  readme.txt  shadowmap_gen.frag
assignment_07/shaders/: phong_shadow.frag
assignment_07/src/: main.cpp
assignment_08/: CMakeLists.txt
assignment_08/data_out/: stochastic_00.txt  stochastic_01.txt  stochastic_02.txt
assignment_08/results/: lsystem.cpp  readme.txt
assignment_08/results/reverse_out/: flower_tree.txt
assignment_09/: CMakeLists.txt  README.md
assignment_09/results/: noise.frag  readme.txt
assignment_09/src/: main_shader_viewer.cpp  main_terrain.cpp
assignment_09/src/render/: ShaderViewer.cpp  shader.cpp  shader.h
assignment_09/src/shaders/: terrain.frag
assignment_09/src/utils/: vec.h
